wip: Spark to WS migration